full authentication chart done. if u are logged in once, then u dont need to login again on for login page. will do fo rregistering page and whole chart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.0
   font_awesome_flutter: ^10.6.0
+  firebase_auth: ^4.12.0
+  google_sign_in: ^6.1.5
+  hive:
+  hive_flutter:
 
 dev_dependencies:
   flutter_test:
