--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-        android:label="chatapp"
+        android:label="OrionChat"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
