--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,20 @@ dependencies:
   google_sign_in: ^6.1.5
   hive:
   hive_flutter:
+  file_picker: ^6.0.0
+  firebase_storage:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
 
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/powr.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
